# PreProcessing

./: .gitignore  HexagonMapTest.ipynb  HistogramasMatrizesDeConfusaoAdaptavias.py  LICENSE  README.md  confusion_matrix_n_cases.py  delete.txt  fix_legends_from_csv.py  fix_legends_from_xlsx.py  generateLegendsIndicatorValues.py  generate_histograms_matrices.py  generate_legends.py  generate_legends_from_qml.py  generate_legends_from_qml_v2_merge.py  generate_legends_from_xlsx.py  generate_qml_from_legends.py  geraShapefilesCOPPE.ipynb  importAdaptaVias.ipynb  matrizConfusaoParaUmCaso.ipynb  matriz_confusao_n_casos.py  merge_indicadores_malha.py  merge_rasters_malha.py  merge_rasters_mesh.py  merge_shapefiles_mesh.py  optimized_merge_shapefiles_mesh.py  pyproject.toml  reproject_shapefiles.py  requirements.txt  separateSEPinAdaptaBrasilInputFiles.ipynb  separateSepInputFiles.py  test.py  utilities.py
crawlers/crawler-1/: crawler_1_indicador_ano_cenario.py  data_indicators.csv
data/: qml_base.qml  settings_labels.csv  settings_labels_impactos_economicos.csv
data/PopResid_munic_Censo22/: sidra_4714_PopResid_munic_22_ptSede.dbf  sidra_4714_PopResid_munic_22_ptSede.shp  sidra_4714_PopResid_munic_22_ptSede.shx
deprecated_codes/: matrizConfusaoParaUmCaso.ipynb  old_primeiro_codigo_merge_indicadores_malha.py  old_primeiro_codigo_merge_rasters_mesh.py  old_refactor_merge_shapefiles_mesh.py  test.py  utils.py
geoparquet/: geoparquet_test.ipynb
src/: config.py  confusion_matrix_n_cases.py  fix_legends_from_csv.py  fix_legends_from_xlsx.py  generateLegendsIndicatorValues.py  generate_histograms_matrices.py  generate_legends_description_from_values.py  generate_legends_from_qml_v2_merge.py  generate_legends_from_xlsx.py  generate_qml_from_legends.py  merge_shapefiles_mesh.py  reproject_shapefiles.py  separateSepInputFiles.py  test.py  truncate_values.py  utilities.py
src/crawlers/crawler-1/: crawler_1_indicador_ano_cenario.py
src/notebooks/: HexagonMapTest.ipynb
