[project]
name = "src"
version = "0.1.0"
description = "PreProcessing é um conjunto de scripts Python desenvolvidos para facilitar o pré-processamento de dados geoespaciais."
authors = [
    {name = "Mário de Araújo Carvalho", email = "mariodearaujocarvalho@gmail.com"},
    {name = "Mauro Assis", email = "assismauro@hotmail.com"},
    {name = "Miguel Gastelumendi", email = "miguelgastelumendi@gmail.com"},
    {name = "Pedro Andrade", email = "pedro.andrade@inpe.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.1,<1.2.0)",
    "matplotlib (==3.8.3)",
    "numpy (==1.26.4)",
    "opencv-python (>=4.8.1.78)",
    "openpyxl (==3.1.2)",
    "pandas (==2.2.0)",
    "progress (==1.6)",
    "pyproj (==3.6.1)",
    "rasterio (==1.3.9)",
    "requests (==2.31.0)",
    "rtree (==1.2.0)",
    "scikit-learn (==1.4.1.post1)",
    "seaborn (==0.13.2)",
    "shapely (==2.0.3)",
    "tqdm (==4.66.2)",
    "urllib3 (==2.2.1)",
    "pyarrow (==15.0.0)",
    "h3 (>=4.3.0,<4.4.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
