[project]
name = "src"
version = "0.2.0"
description = "PreProcessing é um conjunto de scripts Python desenvolvidos para facilitar o pré-processamento de dados geoespaciais."
authors = [
    {name = "Mário de Araújo Carvalho", email = "mariodearaujocarvalho@gmail.com"},
    {name = "Mauro Assis", email = "assismauro@hotmail.com"},
    {name = "Miguel Gastelumendi", email = "miguelgastelumendi@gmail.com"},
    {name = "Pedro Andrade", email = "pedro.andrade@inpe.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.3,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "progress (>=1.6.1,<2.0.0)",
    "pyproj (>=3.7.2,<4.0.0)",
    "rasterio (>=1.5.0,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "rtree (>=1.4.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "h3 (>=4.4.2,<5.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
